manifests/jovian-prod/immich/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: jovian-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: immich
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        gpu: rtx4060
      containers:

      # Immich Front End
      - name: immich
        image: ghcr.io/immich-app/immich-server:v3.2.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2283
          name: immich-http
          protocol: TCP
        volumeMounts:
        - name: immich-upload
          mountPath: /usr/src/app/upload
        - name: immich-config
          mountPath: /var/lib/postgresql/data
          subPath: db
        - name: immich-external
          mountPath: /external_libraries
          readOnly: true
        - name: dev-dri
          mountPath: /dev/dri
          readOnly: true
        - name: local-time
          mountPath: /etc/localtime
          readOnly: true
        resources:
          requests:
            memory: "4Gi"
            cpu: "1000m"

      # Immich Machine learning
      - name: immich-machine-learning
        image: ghcr.io/immich-app/immich-machine-learning:main-cuda
        imagePullPolicy: Always
        Ports:
        - containerPort: 3003
          name: immich-machine-learning
          protocol: TCP
        volumeMounts:
        - name: dev-dri
          mountPath: /dev/dri
          readOnly: true
        - name: immich-config
          mountPath: /cache
          subPath: model-cache
        resources:
          requests:
            memory: "600Mi"
            cpu: "500m"

      # Immich Redis
      - name: immich-redis
        image: docker.io/valkey/valkey:9@sha256:4963247afc4cd33c7d3b2d2816b9f7f8eeebab148d29056c2ca4d7cbc966f2d9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: immich-redis
          protocol: TCP
        livenessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: "25Mi"
            cpu: "25m"
          limits:
            memory: "50Mi"
            cpu: "500m"

      # Immich Database
      - name: immich-database
        image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: immich-postgres
          protocol: TCP
        volumeMounts:
        - name: immich-config
          mountPath: /var/lib/postgresql/data
          subPath: db
        resources:
          requests:
            memory: "2Gi"
            cpu: "100m"

      volumes:
      - name: immich-config
        persistentVolumeClaim:
          claimName: immich-pvc
          readOnly: false
      - name: immich-upload
        persistentVolumeClaim:
          claimName: immich-upload-smb-pvc
          readOnly: false
      - name: immich-external
        persistentVolumeClaim:
          claimName: immich-external-smb-pvc
          readOnly: true
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: local-time
        hostPath:
          path: /etc/localtime

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - plex
            topologyKey: "kubernetes.io/hostname"
