manifests/jovian-prod/immich/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: jovian-prod
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: immich.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  immich-service
                port:
                  number: 2283
